Add Product - display issues
